--- a/Double Clustering.ipynb
+++ b/Double Clustering.ipynb
@@ -742,7 +742,9 @@
    "source": [
     "References\n",
     "-----------\n",
-    "https://www.r-bloggers.com/standard-deviation-vs-standard-error/"
+    "Petersen (2008, RFS)\n",
+    "\n",
+    "Clustering options are exactly same as the STATA. (option specification)"
    ]
   }
  ],
