--- a/Double Clustering.ipynb
+++ b/Double Clustering.ipynb
@@ -304,22 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "5.9977382869851"
+       "-5.9977382869851"
       ],
       "text/latex": [
-       "5.9977382869851"
+       "-5.9977382869851"
       ],
       "text/markdown": [
-       "5.9977382869851"
+       "-5.9977382869851"
       ],
       "text/plain": [
-       "[1] 5.997738"
+       "[1] -5.997738"
       ]
      },
      "metadata": {},
@@ -329,27 +329,27 @@
    "source": [
     "est.b = model$coefficients[2,c(\"Estimate\")]\n",
     "est.se = model$coefficients[2,c(\"Std. Error\")]\n",
-    "(ols.t = (beta-est.b)/est.se)"
+    "(ols.t = (est.b-beta)/est.se)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "1.33263005855211"
+       "-1.33263005855211"
       ],
       "text/latex": [
-       "1.33263005855211"
+       "-1.33263005855211"
       ],
       "text/markdown": [
-       "1.33263005855211"
+       "-1.33263005855211"
       ],
       "text/plain": [
-       "[1] 1.33263"
+       "[1] -1.33263"
       ]
      },
      "metadata": {},
@@ -368,7 +368,7 @@
     "  est.b = cluster.double[2,c(\"Estimate\")]\n",
     "  est.se = cluster.double[2,c(\"Std. Error\")]                       \n",
     "                            \n",
-    "  (dc.t = (beta-est.b)/est.se)                        \n",
+    "  (dc.t = (est.b-beta)/est.se)                        \n",
     "               "
    ]
   },
@@ -376,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OLS t value is 6 and Double Clustering t value is 1.33"
+    "OLS t value is -6 and Double Clustering t value is -1.33"
    ]
   },
   {
